--- a/Savio/SavingPlanSetup/SACreateGroupSavingPlanViewController.xib
+++ b/Savio/SavingPlanSetup/SACreateGroupSavingPlanViewController.xib
@@ -43,7 +43,7 @@
                                     </constraints>
                                     <state key="normal" title="Button" image="generic-camera.png"/>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gvq-sT-fx5">
+                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gvq-sT-fx5">
                                     <rect key="frame" x="267" y="123" width="65" height="10"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="10" id="Vts-Uf-8mj"/>
