--- a/Savio/SavingPlanSetupCells/InviteFriendsButtonTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/InviteFriendsButtonTableViewCell.xib
@@ -53,12 +53,12 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64f-Zh-9hs">
                         <rect key="frame" x="4" y="115" width="312" height="1"/>
-                        <color key="backgroundColor" red="0.50618397141379312" green="0.74075124664482761" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="ION-cq-wMX"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.63137254899999995" green="0.83921568629999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.31764705882352939" green="0.32941176470588235" blue="0.36470588235294116" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -79,6 +79,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="bottomBorderLabel" destination="64f-Zh-9hs" id="roS-0a-7jN"/>
                 <outlet property="inviteButton" destination="KB1-Jc-Oxb" id="DDl-aJ-WbY"/>
                 <outlet property="orginisersLabel" destination="wP4-Nx-q9S" id="gJ4-dn-9QF"/>
             </connections>
